--- a/Proyecto.Rmd
+++ b/Proyecto.Rmd
@@ -14,3 +14,23 @@ yearly <- read_csv('deaths_handwashing.csv')
 yearly
 
 ```
+
+2. El alarmante número de muertes
+
+```{r}
+
+yearly <- yearly %>%
+  mutate(proportion_deaths=deaths/births)
+
+yearly
+```
+
+
+3. Muerte en las clínicas
+```{r}
+#3.1. Utilice ggplot para hacer una gráfica lineal de proportion_deaths por año (columna
+#year) con una línea por clínica.
+
+ggplot(yearly, aes(x=year, y=proportion_deaths,color=clinic)) +
+  geom_line()
+```
