--- a/Proyecto.Rmd
+++ b/Proyecto.Rmd
@@ -34,3 +34,37 @@ yearly
 ggplot(yearly, aes(x=year, y=proportion_deaths,color=clinic)) +
   geom_line()
 ```
+
+4. Comienza el lavado de manos
+
+```{r}
+#4.1
+monthly <- read_csv('deaths_clinic_1.csv')
+
+#4.2
+monthly <- monthly%>%
+  mutate(proportion_deaths=deaths/births)
+
+#4.3
+ head(monthly)
+```
+
+5. El efecto del lavado de manos
+
+```{r}
+#5.1 y 5.2
+ggplot(monthly,aes(x=date,y=proportion_deaths))+
+  geom_line()+
+  labs(x="Fecha",y="Proporcion Muertes")
+```
+
+```{r}
+#5.3
+library(lubridate)
+
+death_by_year <- monthly %>%
+  mutate(year=year(date)) %>%
+  group_by(year) %>%
+  summarize(media=mean(deaths))
+```
+
