--- a/Proyecto.Rmd
+++ b/Proyecto.Rmd
@@ -7,6 +7,7 @@
 library(tidyverse)
 library(dplyr)
 library(ggplot2)
+library(lubridate)
 
 #Lectura del archivo csv
 yearly <- read_csv('deaths_handwashing.csv')
@@ -18,7 +19,7 @@ yearly
 2. El alarmante número de muertes
 
 ```{r}
-
+#Se agrega columna de proporcion de muertes por nacimientos
 yearly <- yearly %>%
   mutate(proportion_deaths=deaths/births)
 
@@ -28,24 +29,31 @@ yearly
 
 3. Muerte en las clínicas
 ```{r}
-#3.1. Utilice ggplot para hacer una gráfica lineal de proportion_deaths por año (columna
-#year) con una línea por clínica.
+# 3.1. 
+# Grafica Lineal de proportion_deaths por año, cada clinica con un color distinto, para ver el patron de comportamiento
 
 ggplot(yearly, aes(x=year, y=proportion_deaths,color=clinic)) +
   geom_line()
+
 ```
 
 4. Comienza el lavado de manos
 
 ```{r}
-#4.1
+# 4.1
+
+# Lectura de archivo de la clinica 1
+
 monthly <- read_csv('deaths_clinic_1.csv')
 
-#4.2
+# 4.2
+
+# Proporcion de muertes por numero de nacimientos
+
 monthly <- monthly%>%
   mutate(proportion_deaths=deaths/births)
 
-#4.3
+# 4.3
  head(monthly)
 ```
 
@@ -53,18 +61,87 @@ monthly <- monthly%>%
 
 ```{r}
 #5.1 y 5.2
+
+# Grafica proporcion de muertes por fecha
+
 ggplot(monthly,aes(x=date,y=proportion_deaths))+
   geom_line()+
-  labs(x="Fecha",y="Proporcion Muertes")
+  labs(x="Fecha",y="Proporción de Muertes")
 ```
 
 ```{r}
-#5.3
-library(lubridate)
+# 5.3
+# Calculo de la media por año
 
 death_by_year <- monthly %>%
   mutate(year=year(date)) %>%
   group_by(year) %>%
   summarize(media=mean(deaths))
 ```
+
+
+```{r}
+# 5.4
+# Grafica de barras de la media por año
+
+ggplot(death_by_year, aes(x=as.character(year),y=media))+
+  geom_col()+
+  labs(y="Media",x="Fecha")
+```
+
+
+6. Los resultados del lavado de manos
+
+6.1. Columna que indica cuando el lavado de manos ya está implementado
+
+```{r}
+monthly <- monthly %>%
+  mutate(handwashing_started=year(date)>=1847)
+```
+
+6.2. Gráfica Lineal de proporción de muertes por fecha. El color de la línea depende de 
+     cuando inició el lavado de manos.
+     
+```{r}
+ggplot(monthly, aes(x=date, y=proportion_deaths, color=handwashing_started))+
+  geom_line()
+```
+
+6.3. Estética de las etiquetas
+```{r}
+
+ggplot(monthly,aes(x=date, y=proportion_deaths, color=handwashing_started))+
+  geom_line()+
+  labs(x="Fecha",y="Proporción de Muertes", color="Lavado Manos")
+
+```
+
+7. ¿Más lavado de manos, menos muertes?
+
+¿Cuánto redujo la proporción mensual de muertes en promedio?
+
+Se redujo casi en una tercera parte las muertes después de que comenzara el lavado de manos.
+
+
+```{r}
+month_summary <- monthly %>%
+  mutate(handwashing_started=year(date)>=1847) %>%
+  group_by(handwashing_started) %>%
+  summarize(mean_proportion_deaths=mean(proportion_deaths))
+
+month_summary
+```
+
+
+8. Análisis estadístico de los datos de lavado de manos
+
+```{r}
+
+
+t.test(proportion_deaths ~ handwashing_started, data=monthly )
+
+```
+
+El intervalo de confianza con un 95% de nivel de confianza es :
+[0.05290915, 0.09747238]
 
